--- a/dna-k8.yaml
+++ b/dna-k8.yaml
@@ -26,7 +26,7 @@ spec:
           value: production
         - name: AWS_REGION_NAME
           value: us-west-1
-        - name: AWS_BUCKET
+        - name: AWS_BUCKET_NAME
           value: instinct-dna-dd
         envFrom:
         - secretRef:
